--- a/puzzle/hydrogen.html
+++ b/puzzle/hydrogen.html
@@ -1,15 +1,15 @@
 <link rel="icon" href="../sp.ico">
 <link rel="stylesheet" type="text/css" href="../style.css">
-<script href="./levelmilestones.js"></script>
 <html>
     </head>
-        <title>god bless google</title>
+        <title>h</title>
     </head>
     <body>
         <div class="puzzle container">
             <img src="hydrogen.png">
         </div>
         <p class="puzzle">this is the last "tutorial" level</p>
-        <p class="puzzle">use all previous knowledge to proceed (+ some googling for some stuff)</p>
+        <p class="puzzle">use all previous knowledge to proceed</p>
     </body>
 </html>
+<!--exif data this image-->
