--- a/puzzle/destiny.html
+++ b/puzzle/destiny.html
@@ -1,1 +1,1 @@
-<script>window.onload = window.location.href = /ascent/destiny.html</script>
+<script>window.onload = window.location.href = "/ascent/destiny.html"</script>
