--- a/puzzle/ascent/destiny.html
+++ b/puzzle/ascent/destiny.html
@@ -1,5 +1,5 @@
-<link rel="icon" href="../sp.ico">
-<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="icon" href="../../sp.ico">
+<link rel="stylesheet" type="text/css" href="../../style.css">
 <html>
     </head>
         <title>level 11</title>
