testing + fixed a typo

--- a/puzzle/ascent/destiny.html
+++ b/puzzle/ascent/destiny.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="desitny.png">
+            <img src="destiny.png">
         </div>
         <p class="puzzle">wip</p>
     </body>
