--- a/testingninetynine/testingninetyseven.html
+++ b/testingninetynine/testingninetyseven.html
@@ -1,3 +1,31 @@
+<?php
+    $servername = "localhost";
+    $username = "dtbsuser";
+    $password = "dtbs#passw01";
+    $dbname = "dtbsname";
+    $conn = new mysqli($servername, $username, $password, $dbname);
+
+    if ($conn->connect_error) {
+        die("Connection failed: " . $conn->connect_error);
+    } 
+
+    $sql = "UPDATE Counter SET visits = visits+1 WHERE id = 1";
+    $conn->query($sql);
+
+    $sql = "SELECT visits FROM Counter WHERE id = 1";
+    $result = $conn->query($sql);
+
+    if ($result->num_rows > 0) {
+        while($row = $result->fetch_assoc()) {
+            $visits = $row["visits"];
+        }
+    } else {
+        echo "no results";
+    }
+    
+    $conn->close();
+?>
+
 <link rel="icon" href="../sp.ico">
 <link rel="stylesheet" type="text/css" href="/style.css">
 <html>
@@ -8,8 +36,7 @@
     </head>
 <script src="testingninetyeight.js"></script>
     <body>
-        <div id="example">
-            <button onclick="alert(ballsballsballs)" type="button">click me!!!!!!</button>
-        </div>
+        <p> Visits: <?php print $visits; ?></p>
+
     </body>
 </html>
