--- a/puzzle/ascent/destiny.html
+++ b/puzzle/ascent/destiny.html
@@ -2,12 +2,13 @@
 <link rel="stylesheet" type="text/css" href="../../style.css">
 <html>
     </head>
-        <title>level 11</title>
+        <title>i love this movie</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="destiny.png">
+            <img src="destiny.png"> <!--something's wrong-->
         </div>
-        <p class="puzzle">wip</p>
+        <p class="puzzle">{ctrl} yo{u} know what to do</p>
     </body>
 </html>
+<!--also answer is in all lowercase all connected-->
