--- a/puzzle/ascent/maracana.html
+++ b/puzzle/ascent/maracana.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="maracana.png">
+            <img src="maracana.jpg">
         </div>
-        <p class="puzzle">wip</p>
+        <p class="puzzle">ok too much research, just find something wrong with the source code</p>
     </body>
 </html>
