--- a/puzzle/left.html
+++ b/puzzle/left.html
@@ -8,7 +8,7 @@
         <div class="puzzle container">
             <img src="left.png">
         </div>
-        <p class="puzzle">use previous knowledge</p>
+        <p class="puzzle">source</p>
         <!--5 3 3 5 14 20 18 9 3-->
         <!-- 1=a, 2=b, etc. -->
     </body>
