--- a/puzzle/ascent/destiny.html
+++ b/puzzle/ascent/destiny.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="destiny.png"> <!--something's wrong-->
+            <img src="desitny.png"> <!--something's wrong-->
         </div>
         <p class="puzzle">{ctrl} yo{u} know what to do</p>
     </body>
