--- a/puzzle/ascent/sport.html
+++ b/puzzle/ascent/sport.html
@@ -6,10 +6,9 @@
     </head>
     <body>
         <div class="puzzle container">
-            <img src="##scorer.png">
+            <img src="">
         </div>
-        <p class="puzzle">investigate: which match was this? who scored for brazil?</p>
-        <p class="puzzle">put it all in the image name.</p>
+        <p class="puzzle">wip</p>
     </body>
 </html>
 <!--ex. "1-0" + "person" scores for brazil becomes "10person.png"-->
