puzzle (prob last update till i move to surge.sh

--- a/puzzle/arcana/fool.html
+++ b/puzzle/arcana/fool.html
@@ -2,12 +2,12 @@
 <link rel="stylesheet" type="text/css" href="../../style.css">
 <html>
     </head>
-        <title>hahahhaha clever puzzle</title>
+        <title>the fool</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="sport.png">
+            <img src="fool.png">
         </div>
-        <p class="puzzle">horse code i mean morse code</p>
+        <p class="puzzle">secret level time, there are 22 of these so good luck</p>
     </body>
 </html>
