--- a/puzzle/ascent/diagram.html
+++ b/puzzle/ascent/diagram.html
@@ -2,12 +2,12 @@
 <link rel="stylesheet" type="text/css" href="../../style.css">
 <html>
     </head>
-        <title>hahahhaha clever puzzle</title>
+        <title>venn</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="sport.png">
+            <img src="diagram.png">
         </div>
-        <p class="puzzle">horse code i mean morse code</p>
+        <p class="puzzle" hint="A AND B">A ∪ B</p>
     </body>
 </html>
