--- a/puzzle/ascent/majesty.html
+++ b/puzzle/ascent/majesty.html
@@ -2,12 +2,12 @@
 <link rel="stylesheet" type="text/css" href="../../style.css">
 <html>
     </head>
-        <title>hahahhaha clever puzzle</title>
+        <title>boy oh boy do i love monarchy</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="sport.png">
+            <img src="majesty.png">
         </div>
-        <p class="puzzle">horse code i mean morse code</p>
+        <p class="puzzle">house of dot png</p>
     </body>
 </html>
