--- a/puzzle/ascent/spectacle.html
+++ b/puzzle/ascent/spectacle.html
@@ -2,12 +2,13 @@
 <link rel="stylesheet" type="text/css" href="../../style.css">
 <html>
     </head>
-        <title>insert funny title</title>
+        <title>what a sight</title>
     </head>
     <body>
         <div class="puzzle container">
-            <img src="maracana.jpg">
+            <img src="spectacle.png">
         </div>
-        <p class="puzzle">ok too much research, just find something wrong with the source code</p>
+        <p class="puzzle" hint="TOTAL eclipse">when's the next one?</p>
+        <!--(year).html-->
     </body>
 </html>
