--- a/puzzle/uno.html
+++ b/puzzle/uno.html
@@ -9,8 +9,61 @@
             <img src="uno.png" >
         </div>
         <br>
-        <p class="puzzle">welcome, innocent bystander</p>
+        <p class="puzzle" hint="theres something down there in the source">welcome, innocent bystander</p>
         <p class="puzzle">to progress, replace the little part of the url at the end to the answer of the puzzle</p>
         <p class="puzzle">now, what comes after <i>uno</i>?</p>
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!--clever,no?-->
+        <!--/puzzle/arcana/fool.html-->
