--- a/puzzle/ascent/matter.html
+++ b/puzzle/ascent/matter.html
@@ -8,6 +8,6 @@
         <div class="puzzle container">
             <img src="matter.png">
         </div>
-        <p class="puzzle">what atom is this?</p>
+        <p class="puzzle">wip (congrats to the one person who played this before i move away from github)</p>
     </body>
 </html>
